--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-modal": "^3.13.1",
+    "@types/react-redux": "^7.1.23",
+    "@types/styled-components": "^5.1.24",
+    "axios": "^0.26.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-modal": "^3.14.4",
+    "react-redux": "^7.2.8",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.5",
+    "styled-normalize": "^8.0.7",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
